After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725584 - launch-environment: don't disable GVFS
launch-environment: don't disable GVFS
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
: 725541 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-03-03 15:03 UTC by Ray Strode [halfline]
Modified: 2016-02-12 07:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
launch-environment: don't disable GVFS (3.79 KB, patch)
2014-03-03 15:03 UTC, Ray Strode [halfline]
committed Details | Review
Disable gvfsd on the login screen (1.97 KB, patch)
2015-12-28 04:16 UTC, Michael Catanzaro
none Details | Review
launch-environment: disable gvfs except in initial setup mode (1.68 KB, patch)
2015-12-28 04:18 UTC, Michael Catanzaro
committed Details | Review

Description Ray Strode [halfline] 2014-03-03 15:03:50 UTC
As an optimization we currently disable gvfs in greeter sessions
(since they'll never need it).

Now that we launch initial-setup in the same sort of environment,
we're running into trouble because it relies on GVFS for fetching
remote avatars.

This commit eliminates the optimzation. The other option would be to
disable GVFS for greeters, but enable it for initial-setup. In order
to keep things simple, we forgo that for now, but may reconsider at
a later time.
Comment 1 Ray Strode [halfline] 2014-03-03 15:03:52 UTC
Created attachment 270813 [details] [review]
launch-environment: don't disable GVFS
Comment 2 Ray Strode [halfline] 2014-03-03 15:04:13 UTC
Attachment 270813 [details] pushed as 446d061 - launch-environment: don't disable GVFS
Comment 3 Ray Strode [halfline] 2014-03-03 15:34:30 UTC
*** Bug 725541 has been marked as a duplicate of this bug. ***
Comment 4 Ray Strode [halfline] 2014-05-06 12:35:27 UTC
(In reply to comment #0)
> The other option would be to
> disable GVFS for greeters, but enable it for initial-setup. In order
> to keep things simple, we forgo that for now, but may reconsider at
> a later time.

People have started noticing gvfs is starting at the login screen and don't like it.  So, we should do a more surgical patch to enable GVFS only for initial-setup and not login screens.  Reopening.
Comment 6 Jasper St. Pierre (not reading bugmail) 2014-09-06 17:00:18 UTC
Do you know why?
Comment 7 Laurent Bigonville 2014-09-06 21:34:58 UTC
The patch is from Josselin, I'm not 100% sure of the rational anymore.

Could be that the processes were not exiting properly(?).
Comment 8 Josselin Mouette 2014-11-15 00:01:15 UTC
The rationale is to avoid starting gvfs daemons and exposing them at the login prompt when we don’t need them.

And we don’t need gnome-initial-setup in Debian anyway.
Comment 9 Michael Catanzaro 2015-12-28 04:16:09 UTC
Created attachment 317947 [details] [review]
Disable gvfsd on the login screen

An exception is made for g-i-s.
Comment 10 Michael Catanzaro 2015-12-28 04:18:49 UTC
Created attachment 317948 [details] [review]
launch-environment: disable gvfs except in initial setup mode

gnome-initial-setup needs gvfs for remote avatar lookup. The greeter
does not.
Comment 11 Ray Strode [halfline] 2016-01-05 21:12:53 UTC
Review of attachment 317948 [details] [review]:

::: daemon/gdm-launch-environment.c
@@ +160,3 @@
 
+        /* Inital setup needs gvfs for fetching remote avatars. */
+        if (strcmp (launch_environment->priv->session_mode, INITIAL_SETUP_SESSION_MODE)) {

please put != 0 here
Comment 12 Michael Catanzaro 2016-01-05 21:53:35 UTC
Attachment 317948 [details] pushed as 5e81151 - launch-environment: disable gvfs except in initial setup mode
Comment 13 Michael Catanzaro 2016-01-06 00:07:58 UTC
Also pushed fa0472f