launch-environment: disable gvfs except in initial setup mode

gnome-initial-setup needs gvfs for remote avatar lookup. The greeter
does not.

https://bugzilla.gnome.org/show_bug.cgi?id=725584